fix z-index modal

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -57,6 +57,7 @@ html {
     right: 0;
     bottom: 0;
     display: flex;
+    z-index: 9999;
 }
 
 .modal__overlay {
